# ELEX-4618

./: .gitignore  README.md
JOYSTICK TEST/: CMakeLists.txt  main.cpp
Lab 2/: CGrocery.cpp  CGrocery.h  CGroceryManager.cpp  CGroceryManager.h  CMakeLists.txt  CProduct.cpp  CProduct.h  Makefile  candy.xml  getstuff.cpp  getstuff.h  grocery1.xml  grocery2.xml  main.cpp
Lab 2/cmake/: CMakeCache.txt  Lab2  Makefile  cmake_install.cmake
Lab 3/: CControl.cpp  CControl.h  CJoystickPosition.cpp  CJoystickPosition.hpp  CMakeLists.txt  Doxyfile  IOTest.cpp  IOTest.hpp  main.cpp  server.h
Lab 3/cvui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cvui.sln
Lab 3/html/: _c_control_8h.html  _c_control_8h.js  _c_control_8h_source.html  _c_joystick_position_8hpp.html  _c_joystick_position_8hpp_source.html  _client_8h_source.html  _i_o_test_8hpp.html  _i_o_test_8hpp.js  _i_o_test_8hpp_source.html  _serial_8h_source.html  annotated.html  annotated_dup.js  class_c_client-members.html  class_c_client.html  class_c_control-members.html  class_c_control.html  class_c_control.js  class_c_joystick_position-members.html  class_c_joystick_position.html  class_c_joystick_position.js  class_c_server-members.html  class_c_server.html  class_i_o_test-members.html  class_i_o_test.html  class_serial-members.html  class_serial.html  class_serial.js  classes.html  cvui_8h_source.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  getstuff_8cpp.html  getstuff_8h.html  getstuff_8h_source.html  globals.html  globals_defs.html  (+16 more)
Lab 3/html/search/: all_1.js  all_3.js  all_4.js  all_5.js  all_a.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_3.js  defines_4.js  enums_2.js  files_2.js  functions_0.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js  variables_0.js
Lab 3/latex/: _c_control_8h.tex  _c_control_8h_source.tex  _c_joystick_position_8hpp.tex  _c_joystick_position_8hpp_source.tex  _client_8h_source.tex  _i_o_test_8hpp.tex  _i_o_test_8hpp_source.tex  _serial_8h_source.tex  annotated.tex  class_c_client.tex  class_c_control.tex  class_c_joystick_position.tex  class_c_server.tex  class_i_o_test.tex  class_serial.tex  cvui_8h_source.tex  files.tex  getstuff_8cpp.tex  getstuff_8h.tex  getstuff_8h_source.tex  refman.tex  server_8h_source.tex  stdafx_8h_source.tex  structcvui_1_1cvui__block__t.tex  structcvui_1_1cvui__context__t.tex  structcvui_1_1cvui__label__t.tex  structcvui_1_1cvui__mouse__btn__t.tex  structcvui_1_1cvui__mouse__t.tex  structcvui_1_1internal_1_1_trackbar_params.tex
Lab 4/: CMakeLists.txt  CSnakeGame.cpp  CSnakeGame.hpp
Lab 4/cvui/: cmake_install.cmake  cvui.h
Lab 4/html/: annotated_dup.js  class_c_base4618.html  class_c_snake_game.html  classes.html  files.html  files_dup.js  functions_func.html  hierarchy.js
Lab 4/html/search/: functions_2.js  functions_3.js
Lab 4/latex/: class_c_snake_game.tex  files.tex  hierarchy.tex
Lab 5/: CBase4618.hpp  CMakeLists.txt  CSnakeGame.cpp  CSnakeGame.hpp  main.cpp
Lab 5 - OLD/: CBase4618.hpp  CMakeLists.txt  CSnakeGame.cpp  CSnakeGame.hpp  main.cpp
Lab 5/cvui/: ALL_BUILD.vcxproj  ZERO_CHECK.vcxproj
Lab 5/html/: _c_base4618_8hpp.html  _c_base4618_8hpp.js  _c_base4618_8hpp_source.html  _c_snake_game_8cpp.html  _c_snake_game_8cpp.js  _c_snake_game_8hpp.html  _c_snake_game_8hpp.js  _c_snake_game_8hpp_source.html  annotated.html  annotated_dup.js  class_c_base4618-members.html  class_c_base4618.html  class_c_snake_game-members.html  class_c_snake_game.html  class_c_snake_game.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  hierarchy.html  main_8cpp.html  main_8cpp.js  navtreedata.js  navtreeindex0.js
Lab 5/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_8.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_3.js  functions_6.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js
Lab 5/latex/: _c_base4618_8hpp.tex  _c_base4618_8hpp_source.tex  _c_snake_game_8cpp.tex  _c_snake_game_8hpp.tex  _c_snake_game_8hpp_source.tex  annotated.tex  class_c_base4618.eps  class_c_base4618.tex  class_c_snake_game.eps  class_c_snake_game.tex  files.tex  main_8cpp.tex  refman.tex
Lab 6/: CAsteroid.cpp  CAsteroidGame.cpp  CMakeLists.txt  CMissle.cpp  CShip.cpp  Doxyfile
Lab 6/headers/: CAsteroid.hpp  CAsteroidGame.hpp  CMissle.hpp  CShip.hpp
Lab 6/headers/html/: _c_asteroid_8hpp_source.html  _c_base4618_8hpp_source.html  _c_control_8h_source.html  _c_joystick_position_8hpp_source.html  _c_missle_8hpp_source.html  _c_ship_8hpp_source.html  _serial_8h_source.html  annotated.html  class_c_asteroid.html  class_c_asteroid.js  class_c_asteroid_game-members.html  class_c_asteroid_game.js  class_c_base4618-members.html  class_c_base4618.html  class_c_control-members.html  class_c_control.js  class_c_game_object-members.html  class_c_joystick_position.js  class_c_missle.html  class_c_ship-members.html  class_c_ship.html  globals.html  (+24 more)
Lab 7/Asteroids PI/: CAsteroid.cpp  CAsteroidGame.cpp  CAsteroidGamePi.cpp  CControlPi.cpp  CJoystickPosition.cpp  CMakeLists.txt  CMissle.cpp  CShip.cpp  main.cpp
Lab 7/GPIO TEST/: CControlPi.cpp  CControlPi.hpp  CJoystickPosition.cpp  CJoystickPosition.hpp  CMakeLists.txt  IOTest.cpp  IOTest.hpp  lab3.code-workspace  main.cpp
Lab 7/rpitest/: CMakeLists.txt  main.cpp
Lab 8/Project/: CBallCamera.cpp  CBallCamera.hpp  CBallSorter.hpp  CControlPi.hpp  CMakeLists.txt  CMotor.hpp  CServo.cpp  CServo.hpp  main.cpp
Lab 8/ballsorter_test/: CMakeLists.txt  main.cpp
Lab 8/motorpwm/: CControlPi.cpp  CControlPi.hpp  CMakeLists.txt  main.cpp
(+187 files in other folders)
